[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
ndarray = { version = "0.15.0", features = ["rayon"] }
itertools = "0.12.0"
[[bin]]
path = "src/1.rs"
name = "1"
[[bin]]
path = "src/2.rs"
name = "2"
[[bin]]
path = "src/3.rs"
name = "3"
[[bin]]
path = "src/4.rs"
name = "4"
[[bin]]
path = "src/5.rs"
name = "5"
[[bin]]
path = "src/6.rs"
name = "6"
[[bin]]
path = "src/7.rs"
name = "7"
[[bin]]
path = "src/7b.rs"
name = "7b"